Implement reactive solution for EnzymeCentricService.
See issue: https://www.ebi.ac.uk/panda/jira/browse/TRM-15138