@@ -1,29 +1,22 @@
 package uk.ac.ebi.ep.ebeye;
 
-import com.aol.simple.react.stream.lazy.LazyReact;
-import java.util.Collection;
+import java.net.URI;
 import java.util.Collections;
 import java.util.List;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ExecutionException;
-import java.util.concurrent.ForkJoinPool;
+import java.util.concurrent.*;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
-import static net.javacrumbs.futureconverter.springjava.FutureConverter.toCompletableFuture;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpMethod;
-import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
-import org.springframework.http.client.HttpComponentsAsyncClientHttpRequestFactory;
-import org.springframework.util.Assert;
-import org.springframework.web.client.AsyncRestTemplate;
 import org.springframework.web.client.RestTemplate;
+import rx.Observable;
+import rx.schedulers.Schedulers;
+
 import uk.ac.ebi.ep.ebeye.config.EbeyeIndexUrl;
 import uk.ac.ebi.ep.ebeye.search.EbeyeSearchResult;
+import uk.ac.ebi.ep.ebeye.search.Entry;
+import uk.ac.ebi.ep.ebeye.search.EnzymeEntry;
+import uk.ac.ebi.ep.ebeye.utils.Preconditions;
 
 /**
  * REST client that communicates with the EBeye search web-service retrieving
@@ -32,148 +25,139 @@ import uk.ac.ebi.ep.ebeye.search.EbeyeSearchResult;
  * @author Joseph <joseph@ebi.ac.uk>
  */
 public class EnzymeCentricService {
-    
-    private final Logger logger = LoggerFactory.getLogger(EnzymeCentricService.class);
-    
-    private final AsyncRestTemplate asyncRestTemplate;
-    
+    public static final int NO_RESULT_LIMIT = Integer.MAX_VALUE;
+
+    private static final int MAX_HITS_TO_RETRIEVE = 20_000;
+    private static final int MULTIPLE_QUERY_START_INDEX = 1;
+    private static final int RETRY_LIMIT = 1;
+
+    private final Logger logger = LoggerFactory.getLogger(this.getClass());
     private final EbeyeIndexUrl ebeyeIndexUrl;
-    
     private final RestTemplate restTemplate;
-    //Maximum number of entries that this service will ask from the EbeyeSearch
-    private final int MAX_HITS_TO_PROCESS = 20_000;
-    private final int FJP_TRIGGER = 4;
-    private final int AVAILABLE_PROCESSORS = Runtime.getRuntime().availableProcessors();
-    
-    @Autowired
-    private HttpComponentsAsyncClientHttpRequestFactory httpComponentsAsyncClientHttpRequestFactory;
-    
-    public EnzymeCentricService(EbeyeIndexUrl ebeyeIndexUrl, RestTemplate restTemplate, AsyncRestTemplate asyncRestTemplate) {
-        Assert.notNull(restTemplate, "'restTemplate' must not be null");
-        Assert.notNull(asyncRestTemplate, "'asyncRestTemplate' must not be null");
-        Assert.notNull(ebeyeIndexUrl, "'ebeyeIndexUrl' must not be null");
-        this.asyncRestTemplate = asyncRestTemplate;
+
+    private int maxRetrievableHits;
+
+    public EnzymeCentricService(EbeyeIndexUrl ebeyeIndexUrl, RestTemplate restTemplate) {
+        Preconditions.checkArgument(restTemplate != null, "'restTemplate' must not be null");
+        Preconditions.checkArgument(ebeyeIndexUrl != null, "'ebeyeIndexUrl' must not be null");
+
         this.ebeyeIndexUrl = ebeyeIndexUrl;
         this.restTemplate = restTemplate;
+
+        this.maxRetrievableHits = MAX_HITS_TO_RETRIEVE;
     }
-    
+
     public List<String> queryEbeyeForEcNumbers(String query, int limit) {
-        Assert.notNull(query, "Query cannot be null");
-        Assert.isTrue(limit > 0, "Limit must be greater than 0");
-        EbeyeSearchResult searchResult = synchronousQuery(query);
-        
-        int synchronousHitCount = searchResult.getHitCount();
-        int hitCount = synchronousHitCount < MAX_HITS_TO_PROCESS ? synchronousHitCount : MAX_HITS_TO_PROCESS;
-        
-        logger.debug("Number of hits for search for [" + query + "] : " + hitCount);
-        
+        Preconditions.checkArgument(query != null, "Query cannot be null");
+        Preconditions.checkArgument(limit > 0, "Limit must be greater than 0");
+
+        Observable<URI> firstUrlRequest = generateUrlRequests(0, 1, query);
+
+        EbeyeSearchResult firstSearchResult = executeQueryRequest(firstUrlRequest)
+                .retry(RETRY_LIMIT)
+                .doOnError((throwable -> logger.error("Error retrieving first response", throwable)))
+                .onErrorReturn(throwable -> createEmptySearchResult())
+                .toBlocking()
+                .single();
+
+        int hitCount = firstSearchResult.getHitCount();
+
+        logger.debug("Number of hits for search for [{}] : {}", query, firstSearchResult.getHitCount());
+
+        List<String> uniqueECs;
+
         if (hitCount <= ebeyeIndexUrl.getMaxEbiSearchLimit()) {
-            
-            return extractDistinctEcNumbersFromSynchronousQuery(searchResult);
+            uniqueECs = firstSearchResult.getEntries().stream()
+                    .map(Entry::getEc)
+                    .distinct()
+                    .collect(Collectors.toList());
         } else {
-            
-            int numIteration = (int) Math.ceil((double) hitCount / (double) ebeyeIndexUrl.getMaxEbiSearchLimit());
-            return asynchronousQuery(query, numIteration, limit);
-        }
-        
-    }
-    
-    private EbeyeSearchResult synchronousQuery(String query) {
-        String url = buildQueryUrl(ebeyeIndexUrl.getEnzymeCentricSearchUrl(),
-                query,
-                ebeyeIndexUrl.getMaxEbiSearchLimit(),
-                0);
-        
-        return restTemplate.getForObject(url, EbeyeSearchResult.class);
-    }
-    
-    private List<String> extractDistinctEcNumbersFromSynchronousQuery(EbeyeSearchResult searchResult) {
-        
-        return searchResult
-                .getEntries().stream()
-                .map(ec -> (ec.getEc()))
-                .distinct()
-                .collect(Collectors.toList());
-        
-    }
-    
-    private String buildQueryUrl(String endpoint, String query, int resultSize, int start) {
-        String ebeyeQueryUrl = "%s?query=%s&size=%d&start=%d&fields=name&format=json";
-        
-        return String.format(ebeyeQueryUrl, endpoint, query, resultSize, start);
-    }
-    
-    private List<String> buildUrlsForAsyncRequest(String query, int numIteration) {
-        List<String> urls = IntStream.range(0, numIteration)
-                .parallel()
-                .mapToObj(index -> buildQueryUrl(ebeyeIndexUrl.getEnzymeCentricSearchUrl(),
-                                query,
-                                ebeyeIndexUrl.getMaxEbiSearchLimit(),
-                                index * ebeyeIndexUrl.getMaxEbiSearchLimit()))
-                .distinct()
-                .collect(Collectors.toList());
-        return Collections.unmodifiableList(urls);
-        
-    }
-    
-    private List<String> asynchronousQuery(String query, int iteration, int limit) {
-        
-        if (AVAILABLE_PROCESSORS >= FJP_TRIGGER) {
-            
-            try {
-                return executeUsingFJP(AVAILABLE_PROCESSORS, query, iteration, limit).get();
-            } catch (InterruptedException | ExecutionException ex) {
-                logger.error(ex.getMessage(), ex);
-            }
-        }
-        
-        return searchEbeyeDomain(buildUrlsForAsyncRequest(query, iteration), limit);
-    }
-    
-    private CompletableFuture<List<String>> executeUsingFJP(int availableProcessors, String query, int iteration, int limit) {
-        final ForkJoinPool forkJoinPool = new ForkJoinPool(availableProcessors);
-        CompletableFuture<List<String>> completableFutureEntries = CompletableFuture.supplyAsync(()
-                -> searchEbeyeDomain(buildUrlsForAsyncRequest(query, iteration), limit),
-                forkJoinPool
-        );
-        return completableFutureEntries;
-    }
-    
-    private List<String> searchEbeyeDomain(List<String> urls, int limit) {
-        
-        HttpMethod method = HttpMethod.GET;
+            int newHitCount = hitCount - firstSearchResult.getEntries().size();
 
-        // Define response type
-        Class<EbeyeSearchResult> responseType = EbeyeSearchResult.class;
+            Observable<Entry> remainingEntries = concurrentQueryRequests(query, newHitCount);
 
-        // Define headers
-        HttpHeaders headers = new HttpHeaders();
-        headers.setContentType(MediaType.APPLICATION_JSON);
-        
-        HttpEntity<EbeyeSearchResult> requestEntity = new HttpEntity<>(headers);
-        
-        LazyReact lazyReact = new LazyReact();
-        
-        List<String> result = lazyReact
-                .fromStream(urls.stream()
-                        .map(url -> toCompletableFuture(asyncRestTemplate.exchange(url, method, requestEntity, responseType))))
-                .map(ResponseEntity<EbeyeSearchResult>::getBody)
-                .map(EbeyeSearchResult::getEntries)
-                .flatMap(Collection::stream).distinct()
-                .map(entry -> entry.getEc())
-                .limit(limit)
-                .collect(Collectors.toList());
-        try {
-            destroyHttpComponentsAsyncClientHttpRequestFactory();
-        } catch (Exception ex) {
-            logger.error(ex.getMessage(), ex);
+            Observable<Entry> allEntries = remainingEntries
+                    .mergeWith(Observable.from(firstSearchResult.getEntries()));
+
+            uniqueECs = allEntries
+                    .map(EnzymeEntry::getEc)
+                    .distinct()
+                    .limit(limit)
+                    .toList()
+                    .toBlocking()
+                    .single();
         }
-        return result;
-        
+
+        return uniqueECs;
     }
-    
-    protected void destroyHttpComponentsAsyncClientHttpRequestFactory() throws Exception {
-        httpComponentsAsyncClientHttpRequestFactory.destroy();
+
+    /**
+     * Creates an Observable that generates url requests as needed by the calling subscriber.
+     *
+     * @param start the start index of the URL
+     * @param end the end index of the URL
+     * @param query the
+     * @return a URI that represents the request to make to the Ebeye search service
+     */
+    private Observable<URI> generateUrlRequests(int start, int end, String query) {
+        final String ebeyeAccessionQuery = "%s?query=%s&size=%d&start=%d&fields=name&format=json";
+        final int resultSize = ebeyeIndexUrl.getMaxEbiSearchLimit();
+        final String endpoint = ebeyeIndexUrl.getEnzymeCentricSearchUrl();
+
+        return Observable.range(start, end)
+                .map(index ->
+                        URI.create(String.format(ebeyeAccessionQuery, endpoint, query, resultSize,
+                                index * ebeyeIndexUrl.getMaxEbiSearchLimit())));
     }
-    
+
+    /**
+     * Creates an {@link Observable} that holds reference to a request to the Ebeye search service for the given reqUrl.
+     * The request will only be executed once it is subscribed upon.
+     *
+     * @param reqUrlObs Observable creating request URL to call
+     * @return the potential {@link EbeyeSearchResult} that results from the call.
+     */
+    private Observable<EbeyeSearchResult> executeQueryRequest(Observable<URI> reqUrlObs) {
+        return reqUrlObs.map(reqUrl -> restTemplate.getForObject(reqUrl, EbeyeSearchResult.class));
+    }
+
+    private Observable<Entry> concurrentQueryRequests(String query, int hitCount) {
+        hitCount = calculateMaxNumberOfHitsToRetrieve(hitCount);
+
+        int totalPaginatedQueries = (int) Math.ceil((double) hitCount / (double) ebeyeIndexUrl.getMaxEbiSearchLimit());
+
+        return reactiveRequests(MULTIPLE_QUERY_START_INDEX, totalPaginatedQueries, query);
+    }
+
+    private int calculateMaxNumberOfHitsToRetrieve(int value) {
+        return value < maxRetrievableHits ? value : maxRetrievableHits;
+    }
+
+    private Observable<Entry> reactiveRequests(int startIndex, int endIndex, String query) {
+        ExecutorService executorService = Executors.newFixedThreadPool(ebeyeIndexUrl.getChunkSize());
+
+        return generateUrlRequests(startIndex, endIndex, query)
+                .flatMap(reqUrl ->
+                        executeQueryRequest(Observable.just(reqUrl))
+                                .subscribeOn(Schedulers.from(executorService))
+                                .map(EbeyeSearchResult::getEntries)
+                                .flatMap(Observable::from)
+                                .retry(RETRY_LIMIT)
+                                .doOnError(throwable -> logger.error("Error executing request: {}", reqUrl, throwable))
+                                .onExceptionResumeNext(Observable.empty()))
+                .doOnCompleted(executorService::shutdown);
+    }
+
+    private EbeyeSearchResult createEmptySearchResult() {
+        EbeyeSearchResult searchResult = new EbeyeSearchResult();
+        searchResult.setHitCount(0);
+        searchResult.setEntries(Collections.emptyList());
+        return searchResult;
+    }
+
+    void setMaxRetrievableHits(int maxRetrievableHits) {
+        assert maxRetrievableHits > 1 : "Number of hits to retrieve can not be less than 1";
+
+        this.maxRetrievableHits = maxRetrievableHits;
+    }
 }
